// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansReducer should handle all defined error types: rejected types GET_SCANS 1`] = `
Object {
  "result": Object {
    "mergeDialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "updateScans": false,
    },
  },
  "type": "GET_SCANS_REJECTED",
}
`;

exports[`ScansReducer should handle all defined fulfilled types: fulfilled types GET_SCANS 1`] = `
Object {
  "result": Object {
    "mergeDialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "updateScans": false,
    },
  },
  "type": "GET_SCANS_FULFILLED",
}
`;

exports[`ScansReducer should handle all defined pending types: pending types GET_SCANS 1`] = `
Object {
  "result": Object {
    "mergeDialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": true,
      "scans": Array [],
      "updateScans": false,
    },
  },
  "type": "GET_SCANS_PENDING",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_HIDE 1`] = `
Object {
  "result": Object {
    "mergeDialog": Object {
      "details": false,
      "scans": Array [],
      "show": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "updateScans": false,
    },
  },
  "type": "MERGE_SCAN_DIALOG_HIDE",
}
`;

exports[`ScansReducer should handle specific defined types: defined type MERGE_SCAN_DIALOG_SHOW 1`] = `
Object {
  "result": Object {
    "mergeDialog": Object {
      "details": undefined,
      "scans": undefined,
      "show": true,
    },
    "view": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "lastRefresh": 0,
      "pending": false,
      "scans": Array [],
      "updateScans": false,
    },
  },
  "type": "MERGE_SCAN_DIALOG_SHOW",
}
`;
